--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,22 @@ body {
 }
 
 .intro {
-  background: url("../img/Layer_1.jpg") no-repeat ;
+  background:url("../img/Layer_1.jpg") no-repeat  ;
   background-position: center;
   background-size: cover;
   padding: 10px 20px 58px 0;
+  position: relative;
+  margin: 0;
 }
+.intro::before{
+content: "";
+width: 100%;
+height: 100%;
+background-color:rgba(0,51,204,0.1);
+z-index: 100;
+position: absolute;
+top:0;
+} 
 
 /* контейнер-сетка */
 .container {
@@ -77,7 +88,6 @@ body {
 .intro__cloud {
   position: relative;
   padding: 13px 20px 20px 20px;
-
   width: 479px;
   background-color: #ffffff;
   opacity: 0.8;
@@ -168,7 +178,7 @@ opacity: 0.6;
   font-weight: 500;
 } 
 .intro__main--header,
-.inro__main--content{
+.intro__main--content{
   margin-bottom:10px;
   align-self: flex-start;
 }
@@ -209,7 +219,7 @@ opacity: 0.6;
   font-family: "Open Sans", sans-serif;
     padding-left: 40px;
 }
-#submit {
+#submit{
   padding: 12px 22px 12px 22px;
   width: 277px;
   background-color: #bb1d1f;
@@ -221,7 +231,6 @@ opacity: 0.6;
   text-transform: uppercase;
   border: none;
 }
-
 .intro__name>label,
  .intro__number>label{
   color: #bb1d1f;
